--- a/en/revenue-agency/services/e-services/cra-login-services/about-login.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-login.html
@@ -51,38 +51,44 @@
   <h1 property="name" id="wb-cont" dir="ltr" class="gc-thickline">About CRA accounts</h1>
 	<p>Find out about the accounts available from the CRA.</p>
   <nav role="navigation" class="gc-toc">
-    <h3>On this page</h3>
+   <h3>On this page</h3>
 	
     <ul>
-	          <li><a href="#section1">Who can register for a CRA account</a></li>
+	          <li><a href="#section1">Who can register for the CRA sign-in services</a></li>
 
-      <li><a href="#section2">Types of accounts</a></li>
-      <li><a href="#section3">Account availability</a></li>
+      <li><a href="#section2">Types of sign-in services</a></li>
+      <li><a href="#section3">Sign-in services availability</a></li>
       <li><a href="#section4">Privacy commitments</a></li>
       <li><a href="#section5">Resources</a></li>
     </ul>
   </nav>
-<h2 id="section1">Who can register for a CRA account</h2>
-<p>You can register for a CRA account if you have:</p>
+<h2 id="section1">Who can register for the CRA sign-in services</h2>
+<p>You can register for a CRA sign-in service if you have:</p>
 	<ul class="fa-ul">
      <li><span class="fas fa-check text-success fa-li"></span>A social insurance number (SIN)
-    <br><strong>Alternatives:</strong>
+	     			      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#ajax-no-sin"></section>
+
+  <!--  <br><strong>Alternatives:</strong>
 	     <ul>
 	     <li>A temporary tax number (TTN)</li>
 		     <li>An individual tax number (ITN)</li>
 		     <li>A non-resident representative number (NRRN), for Represent a Client only</li>
-     </ul></li>
+     </ul>-->
+     </li>
      <li><span class="fas fa-check text-success fa-li"></span>A filed and assessed income tax and benefit return from the current or previous tax year</li>
-	<details class="max content"><summary>If you have not filed your tax return</summary>
-		<p>If you have not filed your taxes for the current or previous tax year, you will not be able to register for a CRA account using a CRA user ID and password or an Interac&reg sign-in partner.</p>
+					      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#ajax-not-filed"></section>
+
+	<!--<details class="max content"><summary>If you have not filed your tax return</summary>
+		<p>If you have not filed your taxes for the current or previous tax year, you will not be able to register for a CRA account using a CRA user ID and password or an <i>Interac&reg</i> sign-in partner.</p>
 		<p>For information on how to file, go to: <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes.html">Get ready to do your taxes</a></p>
-		<p>If you live in British Columbia or Alberta, you may be able to register for My Account using a provincial sign-in partner.</p>
-	</details>
+		<p>If you live in British Columbia or Alberta, you may be able to register for My Account using a provincial digital ID.</p>
+	</details>->
 	</ul>
 	
-  <h2 id="section2">Types of accounts</h2>
 <!--  <p>There are currently three accounts that CRA provides to give you acccess to CRA services.</p> -->
-	<p>There are 3 different accounts you can register for:</p>
+		  <h2 id="section2">Types of sign-in services</h2>
+
+	<p>There are 3 different services you can register for:</p>
   
 	<dl class="dl-horizontal">
     <dt><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a></dt>
@@ -113,15 +119,28 @@
     </li>
   </ul> -->
 
-  <h2 id="section3">Account availability</h2>
+  <h2 id="section3">Sign-in services availability</h2>
   <div id="section2-content">
-	  <p>Access your account during our available hours of service. If you are having difficulty, you might need to update your browser.</p>
+	  <p>Access your sign-in service during our available hours of service. If you are having difficulty, you might need to update your browser.</p>
 	  <h3>Hours of service</h3>
-		      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-hours-of-service"></section>
+	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-hours-of-service"></section>
+
+<!--  <details class="max-content">
+    <summary>Hours of operation</summary>
+    <ul class="list-unstyled lst-spcd">
+      <li><strong>Newfoundland Standard Time:</strong> 7:30 am to 4:30 am</li>
+      <li><strong>Atlantic Standard Time:</strong> 7 am to 4 am</li>
+      <li><strong>Eastern Standard Time:</strong> 6 am to 3 am</li>
+      <li><strong>Central Standard Time:</strong> 5 am to 2 am</li>
+      <li><strong>Mountain Standard Time:</strong> 4 am to 1 am</li>
+      <li><strong>Pacific Standard Time:</strong> 3 am to 12 am (midnight)</li>
+    </ul>
+  </details>-->
+  
 
 <h3>Browser requirements</h3>
 	  
-			      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-browser-requirements"></section>
+		      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-browser-requirements"></section>
 
   <h2 id="section4">Privacy commitments</h2>
 	<div id="section3-content">
@@ -134,7 +153,7 @@
   </ul>
 		</div>
   <h2 id="section5">Resources</h2>
-  <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>
+  <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using the CRA sign-in services</a></p>
   <!--  <li><a href="#">Glossary for CRA sign-in services</a></li> -->
   
   <div class="owner mrgn-tp-lg">
