--- a/en/revenue-agency/services/e-services/cra-login-services/about-login.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-login.html
@@ -39,7 +39,7 @@
 					title: "Canada Revenue Agency",
 					href: "https://www.canada.ca/en/revenue-agency.html"
 				},{
-					title: "CRA accounts",
+					title: "CRA sign-in services",
 					href: "/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html"
 				}],
 				search: true,
@@ -48,8 +48,8 @@
 			});
 </script>
 <main role="main" property="mainContentOfPage" class="container">
-  <h1 property="name" id="wb-cont" dir="ltr" class="gc-thickline">About CRA accounts</h1>
-	<p>Find out about the accounts available from the CRA.</p>
+  <h1 property="name" id="wb-cont" dir="ltr" class="gc-thickline">About CRA sign-in services</h1>
+	<p>Find out about the sign-in services available from the CRA.</p>
   <nav role="navigation" class="gc-toc">
    <h3>On this page</h3>
 	
