--- a/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
@@ -3,7 +3,7 @@
 <head prefix="og: http://ogp.me/ns#">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>Multi-factor authentication to access CRA accounts - Canada.ca</title>
+<title>Multi-factor authentication to access CRA sign-in services - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
 <link rel="canonical" href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html"/>
@@ -112,8 +112,8 @@
           <ol class="breadcrumb">
             <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
             <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
-            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
-            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help with using your CRA accounts</a></li>
+            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA sign-in services</a></li>
+            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help for CRA sign-in services</a></li>
           </ol>
         </div>
       </nav>
@@ -122,11 +122,11 @@
 </div>
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
 <div class="mwstitle section">
-<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
+<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA sign-in services help</p>
 <h1 class="mrgn-tp-0" id="wb-cont">Multi-factor authentication (MFA)</h1>
 </div>
   </div>
-  <p>Multi-factor authentication (MFA) increases the security of the CRA accounts by requiring you to enter a one-time passcode every time you sign in. MFA is mandatory for all users who wish to have a CRA account.</p>
+  <p>Multi-factor authentication (MFA) increases the security of the CRA sign-in services by requiring you to enter a one-time passcode every time you sign in. MFA is mandatory for all users who wish to use the CRA sign-in services.</p>
   <h2 class="h4">On this page</h2>
   <ul>
     <li><a href="#section1">MFA options</a></li>
@@ -137,29 +137,29 @@
  <!--   <li><a href="#section4">Scams and fraud</a></li> -->
   </ul>
   <h2 id="section1">MFA Options</h2>
-  <p>You will be prompted to enroll in MFA when you register for an account. </p>
+  <p>You will be prompted to enroll in MFA when you register. </p>
 	  <p>You can choose to enroll with one of the following options to get your one-time passcode:</p>
   <ul>
-    <li><a href="#section5">Telephone</a></li>
+    <li><a href="#section5">Phone</a></li>
     <li><a href="#section6">Passcode grid</a></li>
 	  <li><a href="#section7">Third-party authenticator app</a></li>
   </ul>
 <!--  <p>You must enter a one-time passcode each time you sign in.</p> -->
-	<p>You can choose one or more of these options when you enroll. You can also choose additional methods later by signing in to your account and selecting <strong>Multi-factor authentication settings</strong> in your <strong>Profile</strong>.</p>
-		<p>The CRA will never call and ask for your one-time passcode over the telephone. You should never share your one-time passcode with anyone, including anyone calling or texting to request it.</p>
- <h3>If your account becomes locked</h3>
-	<p> If your account becomes locked due to entering the wrong passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again. If this happens 3 times, you will be permanently locked out, and will need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
+	<p>You can choose one or more of these options when you enroll. You can also choose additional methods later by signing in and selecting <strong>Multi-factor authentication settings</strong> in your <strong>Profile</strong>.</p>
+		<p>The CRA will never call and ask for your one-time passcode over the phone. You should never share your one-time passcode with anyone, including anyone calling or texting to request it.</p>
+  <div id="ajax-locked-account"><h3>If your account becomes locked</h3>
+	<p> If your account becomes locked due to entering the wrong passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again. If this happens 3 times, you will be permanently locked out, and will need to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p></div>
 
-  <h3 id="section5">Get your passcode by telephone</h3>
-  <p> If you choose to enroll with the telephone option, you will need to provide at least one cell or landline number. Each time you sign in, a new one-time passcode will be sent to the telephone number selected.</p>
+  <h3 id="section5">Get your <!--one-time -->passcode by phone</h3>
+  <p> If you choose to enroll with the phone option, you will need to provide at least one cell or landline number. Each time you sign in, a new one-time passcode will be sent to the phone number selected.</p>
   <details>
 	  <summary>You can use VoIP to get your passcode</summary>
 	  <p>You can use a VoIP service with multi-factor authentication. However, some VoIP services may not be compatible with the CRA’s MFA service. If you can’t get the one-time passcode by text, choose the “Call me” delivery method.</p>
   </details>
 	<details>
     <summary>You can use an international phone number to receive your passcode</summary>
-    <p> You can receive your passcode to telephone numbers based within North American countries that participate in the North American Numbering Plan (countries that an individual can call from Canada by dialing 1 + 10 digits). The telephone number must be supplied by telephone providers<!--(i.e. landline or mobile phone)-->.</p>
-    <p> Telephone numbers in the following countries can receive a passcode:</p>
+    <p> You can receive your passcode to phone numbers based within North American countries that participate in the North American Numbering Plan (countries that an individual can call from Canada by dialing 1 + 10 digits). The phone number must be supplied by telephone providers<!--(i.e. landline or mobile phone)-->.</p>
+    <p> Phone numbers in the following countries can receive a passcode:</p>
     <ul>
       <li>American Samoa </li>
       <li>Anguilla </li>
@@ -187,7 +187,7 @@
       <li>United States </li>
       <li>United States Virgin Islands </li>
     </ul>
-    <p>Alternately, you can enroll with the passcode grid or authenticator app options and you do not need access to a telephone at all.</p>
+    <p>Alternately, you can enroll with the passcode grid or third-party authenticator app options and you do not need access to a phone at all.</p>
   </details>
   <p class="mrgn-tp-lg">When you sign in, you can choose to receive your one-time passcode by:</p>
   <ul class="cnjnctn-type-or cnjnctn-sm">
@@ -195,8 +195,8 @@
       <h3 class="h4 mrgn-tp-sm text-muted">Text message <span class="wb-inv">Option 1 of 2</span></h3>
       <p>Open the text message first, then use the passcode from the body of the message.</p>
       <p>The CRA does not charge for this service, however your provider may charge standard message and data rates.</p>
-      <details>
-      <!--summary>Text message options</summary>
+     <!-- <details>
+      summary>Text message options</summary>
     <p>If you are enrolled with a Canadian telephone number you can to change your message preferences or get more information.</p>
 					<p>Send a text message to "27223":</p>
     <dl class="dl-horizontal">
@@ -211,30 +211,30 @@
     </li>
     <li class="cnjnctn-col">
       <h3 class="h4 mrgn-tp-sm text-muted">Phone call <span class="wb-inv">Option 2 of 2</span></h3>
-      <p>Your passcode will be told to you in an automated message from a toll-free number.</p>
+      <p>Your passcode will be verbally told to you in an automated message from a toll-free number.</p>
     </li>
   </ul>
   <p class="mrgn-tp-lg">If you did not receive your one-time passcode, you can:</p>
   <ul>
-    <li>Ask for it to be resent or sent to a different telephone number that you have already enrolled</li>
+    <li>Ask for it to be resent or sent to a different phone number that you have already enrolled</li>
 	   <li>Try the <strong>Call me</strong> option instead of <strong>Text me</strong > if you are using a VoIP service</li>
     <li>Use the passcode grid if you are already enrolled with that option</li>
-	  <li>Use the authenticator app if it is already set up</li>
+	  <li>Use the third-party authenticator app if it is already set up</li>
    
   </ul>
-  <p>If you still can't receive your one-time passcode, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
+  <p>If you still can't receive your one-time passcode, you will have to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
   
   <!--p> If you select "Text me", the passcode will be sent by Short Messaging Service (SMS). <strong>Open the text message</strong> first, then use the passcode from the body of the message.</p>
   <p> If you select "Call me", you will receive a phone call from a toll-free number, and the passcode will be told to you in an automated message.</p-->
   
-  <h3 id="section6"> Get your passcode by passcode grid</h3>
-  <p> If you choose to enroll with a passcode grid, the system will generate a unique passcode grid for you. You will use this grid every time you sign in to your account, so you must either save it or print it.</p> 
+  <h3 id="section6"> Get your <!--one-time -->passcode by passcode grid</h3>
+  <p> If you choose to enroll with a passcode grid, the system will generate a unique passcode grid for you. You will use this grid every time you sign in, so you must either save it or print it.</p> 
 	<p>The passcode grid is a table made up of numbered rows and lettered columns, similar to a Bingo card. We will ask for combinations (for example, B,1; A,3) to create your one-time passcode. We will ask for 3 of these combinations each time you sign in. </p>
- <p>Your passcode grid will expire after 18 months. Before the expiry date, sign in to your account and generate a new one in <strong>Multi-factor authentication settings</strong>.
-	<p> If you lose your passcode grid or it expires, you will still be able to sign in if you have added the telephone or authenticator app option for MFA. If you have not, you will need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>. </p>
+ <p>Your passcode grid will expire after 18 months. Before the expiry date, sign in and generate a new one in <strong>Multi-factor authentication settings</strong>.
+	<p> If you lose your passcode grid or it expires, you will still be able to sign in if you have added the phone or authenticator app option for MFA. If you have not, you will need to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>. </p>
 
-		<h3 id="section7">Get your passcode with a third-party authenticator app</h3>
-		<p>If you choose to use a third-party authenticator app, you will need to download an app that is compatible with the CRA accounts. The app store offers many free third-party authenticator app options to choose from.</p>
+		<h3 id="section7">Get your <!--time-based one-time -->passcode with a third-party authenticator app</h3>
+		<p>If you choose to use a third-party authenticator app, you will need to download an app that is compatible with the CRA sign-in services. The app store offers many free third-party authenticator app options to choose from.</p>
 		<p>Using the app, scan the provided QR code with a mobile device when prompted. If you are unable to scan the QR code, you can manually enter the setup key the CRA provides into the app. The app will now be set up and you will not have to complete this step again.</p>
 		<p>The app will then generate a 6-digit time-based one-time passcode for you to sign in with. For security, the app will generate a new passcode every 30 seconds.</p>
 		
@@ -243,18 +243,19 @@
   <p> If you enrolled with <strong>both options</strong>, and are having issues with the one-time passcode (e.g., you didn't receive the one-time passcode to your telephone, you misplaced your passcode grid) you can select to use the other option by choosing "different option" when prompted to enter your one-time passcode.</p>
   <p> If you only enrolled with <strong>one option</strong>, and can't use that option to provide the one-time passcode, please <u>contact us by phone</u>. </p-->
   <h2 id="section2"> Update your MFA settings</h2>
-  <p>After you sign in to your account, go to <strong>Multi-factor authentication settings</strong> to update your current MFA settings or enroll in additional MFA options. You can:</p>
-	<ul><li>Add or change a telephone number for MFA</li>
+  <p>After you sign in, go to <strong>Multi-factor authentication settings</strong> to update your current MFA settings or enroll in additional MFA options. You can:</p>
+	<ul><li>Add or change a phone number for MFA</li>
 		<li>Change your language settings</li>
 		<li>Add or remove an MFA option</li>  
 		<li>Generate a new passcode grid</li></ul>
-	<p>We recommend that you enroll in more than one option, although only one option is required. Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app.</p>
+	<div id="ajax-enroll-multiple-mfa"><h3>Enroll in multiple multi-factor authentication (MFA) options</h3>
+	<p>We recommend that you enroll in more than one option, although only one option is required. Enrolling in multiple MFA options will help ensure that you can still access the CRA sign-in services if you change your phone number, misplace your passcode grid, or delete the third-party authenticator app.</p></div>
 <!--  <p> You can manage your options by selecting Multi-factor authentication settings within My Account, My Business Account and Represent a Client. You can add or change a telephone number for MFA, change your language setting, or remove the telephone option. Additionally, you can remove the passcode grid option or generate a new one. We recommend that you have both options on file although only one option is required.</p> -->
- <p>You must have access to your account to make changes to your MFA settings.</p>
+ <p>You must have access to the CRA sign-in services to make changes to your MFA settings.</p>
 
 	<h2 id="section3">If you can't receive your one-time passcode</h2>
 	<p>If your phone number has changed and you can no longer receive your one-time passcode to that number, you can use another MFA option if you are <strong>already</strong> enrolled with that option.</p>
-	<p>If you don't have access to your old phone number and you are not enrolled with another MFA option, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
+	<p>If you don't have access to your old phone number and you are not enrolled with another MFA option, you will have to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
 	
 	<!--<h2 id="section3">Avoid getting locked out of your account</h2>
 	<p>Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app. When you sign in to your account, you can update your current MFA settings or enroll in additional MFA options.</p>
