--- a/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
@@ -39,10 +39,10 @@
 					title: "Canada Revenue Agency",
 					href: "https://www.canada.ca/en/revenue-agency.html"
 				},{
-					title: "CRA accounts",
+					title: "CRA sign-in services",
 					href: "/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html"
 					},{
-					title: "Help with using your CRA accounts",
+					title: "Help for CRA sign-in services",
 					href: "/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html"
 				}],
 				search: true,
@@ -52,11 +52,11 @@
 </script>
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
 <div class="mwstitle section">
-<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
-<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">About <i>Interac&reg</i> sign-in partners</h1>
+<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA sign-in services help</p>
+<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">About Sign-In Partners</h1>
 </div>
   <nav role="navigation" class="gc-toc">
-    <p>When you choose to access your CRA account with an <i>Interac</i> sign-in partner, you use the same sign-in information you use for your online banking. <!--You can use your <i>Interac</i> sign-in partner to sign in to:--></p> 
+   <p>When you choose to access the CRA sign-in service with a Sign-In Partner, you use the same sign-in information you use for your online banking. <!--You can use your <i>Interac</i> sign-in partner to sign in to:--></p> 
 <!--	  <ul>
 		<li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a></li>
 		<li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a></li>
@@ -66,26 +66,32 @@
    
 	  <h3>On this page</h3>
     <ul>
-	          <li><a href="#section1">What is an <i>Interac</i> sign-in partner</a></li>
-      <li><a href="#section2">Who can use an <i>Interac</i> sign-in partner</a></li>
+	          <li><a href="#section1">What is a Sign-In Partner</a></li>
+      <li><a href="#section2">Who can use a Sign-In Partner</a></li>
+      <li><a href="#section3">Managing your online banking credentials</a></li>
 
-      <li><a href="#section3">Your privacy and <i>Interac</i> sign-in partners</a></li>
-      <li><a href="#section4">Change your sign-in option</a></li>
+      <li><a href="#section4">Your privacy and Sign-In Partners</a></li>
+      <li><a href="#section5">Change your sign-in option</a></li>
     <!--  <li><a href="#section4">Privacy and security</a></li> -->
     </ul>
   </nav>
-	 <h2 id="section1">What is an <i>Interac</i> sign-in partner</h2>
+	 <h2 id="section1">What is a Sign-In Partner</h2>
  
-	<p><i>Interac</i> sign-in partners are financial institutions like banks and credit unions that have partnered with <i>Interac</i> to allow their customers to use their online sign-in information to access Government of Canada services.</p> 
+	<p>Sign-In Partners are organizations that have partnered with <i>Interac&reg</i>. This allows their customers to use their online sign-in information (for example, card numbers or usernames and passwords) to use Government of Canada services. Sign-In Partners may include financial institutions, like banks and credit unions, and others.</p> 
+	<p>This partnership happens through the <i>Interac</i> sign-in service, which is a credential broker service that acts as a bridge between the Government of Canada and participating Sign-In Partners. The <i>Interac</i> sign-in service operates independently of the financial institutions and the Government of Canada services.</p> 
 	<p>You may use the same banking information to sign into multiple government services, or you may use different banking information for different government services.</p>  
 	<p>Using your existing online banking information means you don’t have to remember a different user ID and password.</p> 
+	<p>Your bank will not charge you for using your banking credential to access government online services.</p>
 	
-	<h2 id="section2">Who can use an <i>Interac</i> sign-in partner</h2>
+	<h2 id="section2">Who can use a Sign-In Partner</h2>
 	  <p>To register with this option, you must: </p>
     <ul class="fa-ul">
-	    <li><span class="fas fa-check text-success fa-li"></span>Have a social insurance number (SIN)</li>
-	    <li><span class="fas fa-check text-success fa-li"></span>Have filed your taxes in the last 2 years</li>
-      <li><span class="fas fa-check text-success fa-li"></span>Have an account with one of the participating <a class="wb-lbx" role="button" aria-controls="sign-in-partners" href="#sign-in-partners">sign-in partners<sup><span class="mrgn-lft-xs far fa-question-circle"></sup></span></a></li>
+	    <li><span class="fas fa-check text-success fa-li"></span>Have a social insurance number (SIN)
+	          			      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#ajax-no-sin"></section>
+
+	    </li>
+	    <li><span class="fas fa-check text-success fa-li"></span>Have filed your taxes in the current or previous tax year</li>
+      <li><span class="fas fa-check text-success fa-li"></span>Have an account with one of the participating <a class="wb-lbx" role="button" aria-controls="sign-in-partners" href="#ajax-sign-in-partners-list">Sign-In Partners<sup><span class="mrgn-lft-xs far fa-question-circle"></sup></span></a></li>
       <li><span class="fas fa-check text-success fa-li"></span>Be registered for online banking</li>
       <details>
         <summary>If you have lost your bank card, or don't know your bank password or user ID</summary>
@@ -95,7 +101,7 @@
 	<!--<p>To register with this option, you must: </p>
 	<ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
       <li class="cnjnctn-col-50">
-        <p>Have an account with one of the participating <a class="wb-lbx" role="button" aria-controls="sign-in-partners" href="#sign-in-partners">sign-in partners<sup><span class="mrgn-lft-xs far fa-question-circle"></sup></span></a></p>
+        <p>Have an account with one of the participating <a class="wb-lbx" role="button" aria-controls="sign-in-partners" href="#ajax-sign-in-partners-list">sign-in partners<sup><span class="mrgn-lft-xs far fa-question-circle"></sup></span></a></p>
       </li>
       <li class="cnjnctn-col">
         <p>Be registered for online banking</p>
@@ -105,33 +111,33 @@
       </details> 
       </li>
 </ul>-->
-	  <p>You can use an <i>Interac</i> sign-in partner to sign in to:</p>
+	  <p>You can use a Sign-In Partner to sign in to:</p>
 	  <ul>
-     <li>My Account</li>
+     <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a></li>
 	  
-     <li>My Business Account</li>
-		  <li>Represent a Client</li></ul>
+     <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a></li>
+		  <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></li></ul>
  
   
-    <h3>Managing your online banking credentials</h3>
+    <h2 id="section3">Managing your online banking credentials</h3>
     <p>To revoke or change your banking user ID or password or manage your banking security questions, you should contact your financial institution for assistance.</p>
-    <p>If your bank gives you a new bank card with new numbers, you must <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to register again using the new card number.</p>
+    <p>If your bank gives you a new bank card with new numbers, you must <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to register again using the new card number.</p>
 	
-    <h2 id="section3">Your privacy and <i>Interac</i> sign-in partners</h2>
-    <p>When you use an <i>Interac</i> sign-in partner, the information you enter and the identity of your financial institution are not shared with the government service you are trying to access. Similarly, information about the government service being accessed is not shared with your financial institution. No personally identifying information or banking details are ever shared. </p>
-  <p>Because the <i>Interac</i> sign-in partner does not provide any identity information to the Government, you must identify yourself by providing some personal information the first time you use this service.</p>
+    <h2 id="section4">Your privacy and Sign-In Partners</h2>
+    <p>When you use a Sign-In Partner, the information you enter and the identity of your financial institution are not shared with the government service you are trying to access. Similarly, information about the government service being accessed is not shared with your financial institution. No personally identifying information or banking details are ever shared. </p>
+  <p>Because the Sign-In Partner does not provide any identity information to the Government, you must identify yourself by providing some personal information the first time you use this service.</p>
     <h3>Using a shared device</h3>
-    <p>When you select the <i>Interac</i> sign-in partner option and choose your financial institution, you will be prompted to enter your banking sign-in information. Some devices allow banking information to pre-populate. Do <strong>not</strong> use your browser's autofill for your online banking information if you register on a shared device. Unless you manually enter your own information, you could link your SIN to someone else's banking information by mistake, and the other person would have access to your tax information.</p>
+    <p>When you select the Sign-In Partner option and choose your financial institution, you will be prompted to enter your banking sign-in information. Some devices allow banking information to pre-populate. Do <strong>not</strong> use your browser's autofill for your online banking information if you register on a shared device. Unless you manually enter your own information, you could link your SIN to someone else's banking information by mistake, and the other person would have access to your tax information.</p>
   </div>
   
-  <h2 id="section4">Change your sign-in option</h2>
-	<p>You must always sign in to your account with the option you registered with.</p>
-<p>If you registered with an <i>Interac</i> sign-in partner and want to change your sign-in option, you can <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to revoke your credential so you can register with a CRA user ID and password instead.</p>
-	<h3>Switch your <i>Interac</i> sign-in partner</h3>
-	</p> You can switch your <i>Interac</i> sign-in partner as long as you still have access to your account.</p>
+  <h2 id="section5">Change your sign-in option</h2>
+	<p>You must always sign in to your sign-in service with the option you registered with.</p>
+<p>If you registered with a Sign-In Partner and want to change your sign-in option, you can <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to revoke your credential so you can register with a CRA user ID and password instead.</p>
+	<h3>Switch your Sign-In Partner</h3>
+	</p> You can switch your Sign-In Partner as long as you still have access to your sign-in service.</p>
 	<ol class="">
-   <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">Select your account</a></li> 
-	   <li>Select <i>Interac</i> sign in partner</li>
+   <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">Select your sign-in service</a></li> 
+	   <li>Select <strong>Sign-In Partner</strong></li>
 
     <li>Select <strong>Switch My Sign-In Partner</strong> at the top of the screen</li>
     <li>Follow the instructions</li>
@@ -141,13 +147,13 @@
 <p>The CRA does not share your registration information with any third party. The information you provide is held by the CRA and is protected under the federal Privacy Act.</p>
     <p>For more information, see our <a href="">Privacy notice</a>.</p>-->
 
-	 <section id="sign-in-partners" class="mfp-hide modal-dialog modal-content overlay-def">
+	 <section id="ajax-sign-in-partners-list" class="mfp-hide modal-dialog modal-content overlay-def">
     <header class="modal-header">
-      <h2 class="modal-title">List of <i>Interac</i> sign-in partner banks and credit unions</h2>
+      <h2 class="modal-title">List of Sign-In Partners</h2>
     </header>
     <div class="modal-body">
       <ul class="colcount-xs-2">
-        <li>Affinity Credit Union</li>
+       <span id="ajax-sign-in-partners"> <li>Affinity Credit Union</li>
         <li>ATB Financial</li>
         <li>BMO Financial Group</li>
         <li>CIBC</li>
@@ -166,7 +172,7 @@
         <li>TD Canada Trust</li>
         <li>Uni</li>
         <li>Vancity</li>
-        <li>Wealthsimple</li>
+        <li>Wealthsimple</li></span>
       </ul>
       
       <!--div data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/includes/chooser-page-logos.txt#logos-en">
