--- a/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>About Interac sign-in partners - Canada.ca</title>
+<title>About Sign-In Partners - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data --> 
 <!-- Meta data--> 
