--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html
@@ -3,7 +3,7 @@
 <head prefix="og: http://ogp.me/ns#">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>My Account for Individuals – CRA Sign in – Canada.ca</title>
+<title>My Account for Individuals – CRA sign-in – Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
 <link rel="canonical" href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html"/>
@@ -118,10 +118,10 @@
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
   <section class="container">
     <div class="mwstitle section">
-      <h1 property="name" class="wb-inv" dir="ltr"> My Account for individuals - CRA Sign in</h1>
+      <h1 property="name" class="wb-inv" dir="ltr"> My Account for individuals - CRA sign-in</h1>
     </div>
     <div aria-hidden="true">
-      <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA Sign in</p>
+      <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA sign-in</p>
       <h1 class="gc-thickline mrgn-tp-0" id="wb-cont">My Account for individuals</h1>
     </div>
    <p>Sign in or register to manage your personal and tax information, check the status of your tax refund or benefit payment, make payments to the CRA, change your contact or banking details, and get a notice of assessment or proof of income.</p>
